--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -3,41 +3,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ImageActivity"
+    android:background="#11ff0000"
     android:orientation="vertical"
-    android:background="#11ff0000">
+    tools:context=".activity.ImageActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="32dp"
         android:gravity="left"
-        android:orientation="vertical"
-        android:layout_margin="32dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/activity_image_upload_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:padding="8dp"
+                android:src="@drawable/ic_file_upload_black_24dp" />
+
+            <ImageView
+                android:id="@+id/activity_image_save_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:padding="8dp"
+                android:src="@drawable/ic_save_black_24dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="x: "/>
+                android:text="x: " />
 
             <TextView
                 android:id="@+id/activity_image_pixel_x"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="28dp"/>
+                android:minWidth="28dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="y: "/>
+                android:text="y: " />
 
             <TextView
                 android:id="@+id/activity_image_pixel_y"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="28dp"/>
+                android:minWidth="28dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -84,22 +113,23 @@
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:scaleType="fitStart"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/activity_image_show_original_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/holo_blue_light"
-        android:clickable="true">
+        android:clickable="true"
+        android:padding="16dp">
+
         <TextView
             android:id="@+id/activity_image_show_original_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show original"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:text="Show original" />
     </FrameLayout>
 </LinearLayout>
