--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,160 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#11ff0000"
-    android:orientation="vertical"
     tools:context=".activity.ImageActivity">
+
+    <include layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="32dp"
-        android:gravity="left"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="#11ff0000"
+        android:orientation="vertical"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
+            android:layout_margin="8dp"
+            android:gravity="left"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/activity_image_upload_button"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="8dp"
-                android:src="@drawable/ic_file_upload_black_24dp" />
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/activity_image_save_button"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="x: " />
+
+                <TextView
+                    android:id="@+id/activity_image_pixel_x"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="28dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="y: " />
+
+                <TextView
+                    android:id="@+id/activity_image_pixel_y"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="28dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="color: " />
+
+                <TextView
+                    android:id="@+id/activity_image_pixel_color_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="8dp"
-                android:src="@drawable/ic_save_black_24dp" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/activity_image_delete_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="8dp"
-                android:src="@drawable/ic_delete_black_24dp" />
+                <View
+                    android:id="@+id/activity_image_pixel_color"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:background="#000000" />
 
-            <ImageView
-                android:id="@+id/activity_image_clear_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="8dp"
-                android:src="@drawable/ic_clear_black_24dp" />
+                <SeekBar
+                    android:id="@+id/activity_image_pixel_color_seekbar"
+                    android:layout_width="255dp"
+                    android:layout_height="wrap_content"
+                    android:max="255" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/image_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <com.itba.atigui.view.ImageControllerView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart" />
+
+            <com.itba.atigui.util.AspectRatioImageView
+                android:id="@+id/image_original"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/activity_image_show_original_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:background="@android:color/holo_blue_light"
+            android:clickable="true"
+            android:padding="16dp">
 
             <TextView
+                android:id="@+id/activity_image_show_original_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="x: " />
-
-            <TextView
-                android:id="@+id/activity_image_pixel_x"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="28dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="y: " />
-
-            <TextView
-                android:id="@+id/activity_image_pixel_y"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="28dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="color: "/>
-
-            <TextView
-                android:id="@+id/activity_image_pixel_color_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <View
-                android:id="@+id/activity_image_pixel_color"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:background="#000000"/>
-
-            <SeekBar
-                android:id="@+id/activity_image_pixel_color_seekbar"
-                android:layout_width="255dp"
-                android:layout_height="wrap_content"
-                android:max="255" />
-        </LinearLayout>
+                android:layout_gravity="center"
+                android:text="Show original" />
+        </FrameLayout>
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/image_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <com.itba.atigui.view.ImageControllerView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:scaleType="fitStart" />
-
-        <com.itba.atigui.util.AspectRatioImageView
-            android:id="@+id/image_original"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:scaleType="fitStart"
-            android:visibility="gone" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/activity_image_show_original_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/holo_blue_light"
-        android:clickable="true"
-        android:padding="16dp">
-
-        <TextView
-            android:id="@+id/activity_image_show_original_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Show original" />
-    </FrameLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
