--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -73,7 +73,7 @@
                         android:tint="@android:color/darker_gray" />
 
                     <ImageView
-                        android:id="@+id/toolbar_undo"
+                        android:id="@+id/toolbar_cancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
@@ -82,8 +82,21 @@
                         android:paddingTop="16dp"
                         android:paddingRight="8dp"
                         android:paddingLeft="8dp"
-                        android:src="@drawable/ic_undo_black_24dp"
+                        android:src="@drawable/ic_clear_black_24dp"
                         android:tint="@android:color/darker_gray"/>
+
+                    <ImageView
+                        android:id="@+id/toolbar_check"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:paddingBottom="16dp"
+                        android:paddingTop="16dp"
+                        android:paddingRight="8dp"
+                        android:paddingLeft="8dp"
+                        android:src="@drawable/ic_check_black_24dp"
+                        android:tint="@android:color/darker_gray" />
 
                     <ImageView
                         android:id="@+id/toolbar_clear"
@@ -96,19 +109,6 @@
                         android:paddingRight="8dp"
                         android:paddingLeft="8dp"
                         android:src="@drawable/ic_block_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_cancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_clear_black_24dp"
                         android:tint="@android:color/darker_gray" />
                 </LinearLayout>
             </FrameLayout>
