--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -110,6 +110,19 @@
                         android:paddingLeft="8dp"
                         android:src="@drawable/ic_import_export_black_24dp"
                         android:tint="@android:color/darker_gray" />
+
+                    <ImageView
+                        android:id="@+id/toolbar_undo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:paddingBottom="16dp"
+                        android:paddingTop="16dp"
+                        android:paddingRight="8dp"
+                        android:paddingLeft="8dp"
+                        android:src="@drawable/ic_undo_black_24dp"
+                        android:tint="@android:color/darker_gray" />
                 </LinearLayout>
             </FrameLayout>
         </android.support.v7.widget.Toolbar>
