--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -99,6 +99,19 @@
                         android:tint="@android:color/darker_gray" />
 
                     <ImageView
+                        android:id="@+id/toolbar_histogram"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:paddingBottom="16dp"
+                        android:paddingTop="16dp"
+                        android:paddingRight="8dp"
+                        android:paddingLeft="8dp"
+                        android:src="@drawable/ic_insert_chart_black_24dp"
+                        android:tint="@android:color/darker_gray" />
+
+                    <ImageView
                         android:id="@+id/toolbar_export"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
