--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -14,130 +14,142 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/toolbar_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|left"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:gravity="center_vertical|right"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/toolbar_upload"
+                    android:layout_weight="1"
+                    android:gravity="left|center_vertical">
+                    <TextView
+                        android:id="@+id/toolbar_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_file_upload_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_save"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_save_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_delete_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_cancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_clear_black_24dp"
-                        android:tint="@android:color/darker_gray"/>
-
-                    <ImageView
-                        android:id="@+id/toolbar_check"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_check_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_histogram"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_insert_chart_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_export"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_crop_black_24dp"
-                        android:tint="@android:color/darker_gray" />
-
-                    <ImageView
-                        android:id="@+id/toolbar_undo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:paddingBottom="16dp"
-                        android:paddingTop="16dp"
-                        android:paddingRight="8dp"
-                        android:paddingLeft="8dp"
-                        android:src="@drawable/ic_undo_black_24dp"
-                        android:tint="@android:color/darker_gray" />
+                        android:layout_gravity="center_vertical|left"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
-            </FrameLayout>
+
+                <HorizontalScrollView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right"
+                        android:gravity="center_vertical|right"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/toolbar_upload"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_file_upload_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
+                        <ImageView
+                            android:id="@+id/toolbar_save"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_save_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
+                        <ImageView
+                            android:id="@+id/toolbar_delete"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_delete_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
+                        <ImageView
+                            android:id="@+id/toolbar_cancel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_clear_black_24dp"
+                            android:tint="@android:color/darker_gray"/>
+
+                        <ImageView
+                            android:id="@+id/toolbar_check"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_check_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
+                        <ImageView
+                            android:id="@+id/toolbar_histogram"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_insert_chart_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
+                        <ImageView
+                            android:id="@+id/toolbar_export"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_crop_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
+                        <ImageView
+                            android:id="@+id/toolbar_undo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:paddingBottom="16dp"
+                            android:paddingTop="16dp"
+                            android:paddingRight="8dp"
+                            android:paddingLeft="8dp"
+                            android:src="@drawable/ic_undo_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+                    </LinearLayout>
+                </HorizontalScrollView>
+
+            </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
