--- a/app/src/main/res/layout/dialog_multiple_sliders.xml
+++ b/app/src/main/res/layout/dialog_multiple_sliders.xml
@@ -26,48 +26,13 @@
         android:gravity="center">
 
         <LinearLayout
+            android:id="@+id/slider_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
             android:layout_marginBottom="16dp">
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
-                android:background="#ffdf00"
-                android:padding="4dp">
-                <View
-                    android:id="@+id/dialog_color_picker_color"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="#000000" />
-            </FrameLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="color: " />
-
-            <TextView
-                android:id="@+id/dialog_color_picker_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="28dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="16dp">
-            <SeekBar
-                android:id="@+id/dialog_color_picker_seekbar"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:max="255" />
         </LinearLayout>
 
         <LinearLayout
