--- a/app/src/main/res/layout/view_slider_info.xml
+++ b/app/src/main/res/layout/view_slider_info.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="title"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="4dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -19,7 +21,7 @@
         android:orientation="horizontal">
         <SeekBar
             android:id="@+id/view_slider_info_seekbar"
-            android:layout_width="255dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:max="256"
             android:layout_marginRight="16dp"/>
